fix arrow align

--- a/public/new_registration/src/webapp/components/vote_instruction/vote_instruction.module.css
+++ b/public/new_registration/src/webapp/components/vote_instruction/vote_instruction.module.css
@@ -12,6 +12,14 @@
     align-items: center;
 }
 
+.instruction_super_container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    flex-grow: 1;
+}
+
 .instruction_container p, h4 {
     margin: 0 10px 0 10px;
     padding: 0;
